--- a/src/main/webapp/css/Design.css
+++ b/src/main/webapp/css/Design.css
@@ -96,6 +96,29 @@ td {
   transform: translateY(4px);/*下に動く*/
   border-bottom: none;/*線を消す*/
 }
+.grayButton {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background:#d3d3d3;/*ボタン色*/
+  border-bottom: solid 3px #808080;
+  border-radius: 3px;
+  font-weight: bold;
+}
+.leftForm {
+	display: inline-block;
+	height: 10px;
+	width: 30%;
+ 	text-align: right;
+}
+.rightForm {
+	display:inline;
+ 	width: 500px;
+}
+
+.blankForm {
+	display:inline;
+}
 .red{
 	color:red;
 }
