--- a/src/main/webapp/css/Design.css
+++ b/src/main/webapp/css/Design.css
@@ -2,7 +2,7 @@
 
 #search {
 	position: relative;
-	left: 150px
+	left: 10%
 }
 
 #bookSearch {
@@ -107,13 +107,13 @@ td {
 }
 .leftForm {
 	display: inline-block;
-	height: 10px;
-	width: 30%;
  	text-align: right;
+ 	width: 100px;
+ 	/*border-style : solid*/
 }
 .rightForm {
 	display:inline;
- 	width: 500px;
+ 	width: 30px;
 }
 
 .blankForm {
